// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component rendering 1`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  border: 0;
  color: #fff;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #F64F64;
  padding: 0.62rem 1.5rem;
  font-size: 14px;
  line-height: 1.5;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
}

.c0:hover {
  background-color: #db495b;
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  class="c0"
>
  Hello World!
</button>
`;

exports[`Button component rendering 2`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  border: 0;
  color: #fff;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #4687FF;
  padding: 0.62rem 1.5rem;
  font-size: 14px;
  line-height: 1.5;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
}

.c0:hover {
  background-color: #3669c6;
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  class="c0"
>
  Hello World!
</button>
`;

exports[`Button component rendering 3`] = `
.c0 {
  display: inline-block;
  font-weight: 600;
  border: 0;
  color: #5B5E64;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #fff;
  padding: 0.62rem 1.5rem;
  font-size: 14px;
  line-height: 1.5;
  border: 1px solid #CBD1D4;
  border-radius: 0.25rem;
  -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
  transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
}

.c0:hover {
  background-color: #fff;
  color: #5B5E64;
  border: 1px solid #acb5ba;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
  class="c0"
>
  Hello World!
</button>
`;
